# CRUD

./: contributer.md  main.py  pyproject.toml
crud_user/control/: crud.py
crud_user/model/: user.py
crud_user/view/: get_input.py
database/: Postgres.py  __init__.py
docs/: README.md
logs/: __init__.py  log_conf.py
painless/helper/: enum.py  exc.py  validator.py
painless/utils/: __init__.py  banner.py  cleaner.py  print_blue.py
test/: __init__.py  crud.py
