[tool.poetry]
name = "crud"
version = "0.1.0"
description = ""
authors = ["Sajad Alimoradi <sajad.alimoradi@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
psycopg2 = "^2.9.6"
colorlog = "^6.7.0"
toml = "^0.10.2"
sqlalchemy = "^2.0.15"
asciimatics = "^1.14.0"
alembic = "^1.11.1"
pyfiglet = "^0.8.post1"
termcolor = "^2.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
